--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, maximum-scale=1.0">
     <title>{%block title %}Saidino Api Page{%endblock%}</title>
      <link rel="stylesheet" href="{{url_for('static',filename='styles/bootstrap.min.css')}}"/>
+     <link rel="stylesheet" href="https://unpkg.com/terminal.css@0.7.2/dist/terminal.min.css" />
     <!-- <xc---link rel="stylesheet" href="https:maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
 </head>
 <body>
