--- a/app/views/users/templates/coments.html
+++ b/app/views/users/templates/coments.html
@@ -6,7 +6,6 @@
 
 
 
-</form>
 
 
 <form action="" method='post' class="container" style="padding-top:20px;">
@@ -30,18 +29,21 @@
 
 <h1>Timeline de Eventos</h1>
 
-<<div class="terminal-timeline">
+<div class="terminal-timeline">
   {% for comment in comments %}
 
   <div class="terminal-card">
     <header>
      {{ comments.nome }} - {{comments.id}}
     </header>
-    <<div class="">
+    <div class="">
       {{comment.commentario}}
 
     </div>
+
+
   </div>
 
 </div>
+{% endfor %}
 {% endblock %}
