deleting env files

--- a/app/views/users/templates/coments.html
+++ b/app/views/users/templates/coments.html
@@ -30,7 +30,7 @@
 <h1>Timeline de Eventos</h1>
 
 <div class="terminal-timeline">
-  {% for comment in comments %}
+  <!-- {% for comment in comments %} -->
 
   <div class="terminal-card">
     <header>
@@ -44,6 +44,6 @@
 
   </div>
 
+  <!-- {% endfor %} -->
 </div>
-{% endfor %}
 {% endblock %}
