--- a/app/views/users/templates/home.html
+++ b/app/views/users/templates/home.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <a href="/users_page/add">Manipule o Banco de Dados</a>
+            <a href="/users_page/add">Make Changes In Database</a>
         </div>
         <div class="col-xs-12">
             <table class="table">
