--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,47 @@
     <!-- <xc---link rel="stylesheet" href="https:maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
 </head>
 <body>
+  <!-- NAV BAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
+            <!-- Brand -->
+
+            <a class="navbar-brand mr-5 ml-3" href="{{url_for('index')}}">Saidino PyDev</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Nav bar content_DrowDown_1 -->
+            <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                <div class="ml-5"> </div>
+                <!-- Dropdown_2 -->
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <!-- Home -->
+                        <li class="nav-item active mr-3 mt-1 ">
+                            <a class="nav-link" href="{{url_for('index')}}">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                         <!-- Query -->
+                         <li class="nav-item active mr-3 mt-1 ">
+                            <a class="nav-link" href="{{url_for('admin')}}">Query All<span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Search Bar -->
+                 <!-- Search Bar -->
+                <form class="form-inline"  action="/" method="GET">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" >
+                    <button class="btn btn-outline-info my-2 my-sm-0" type="submit" value="search">Search</button>
+                </form>
+            </div>
+        </nav>
+
+
+
+  <!-- ENDNAV -->
+
+
+
+
   <div class='container'>
     <img src='{{url_for('static',filename='image/logo.jpg')}}' style="width:54px;height:54px;"/>
 
