--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                         </li>
                          <!-- Query -->
                          <li class="nav-item active mr-3 mt-1 ">
-                            <a class="nav-link" href="{{url_for('admin')}}">Query All<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href='/users_page/'>Query All<span class="sr-only">(current)</span></a>
                         </li>
                     </ul>
                 </div>
