--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,18 @@
      <link rel="stylesheet" href="{{url_for('static',filename='styles/bootstrap.min.css')}}"/>
      <link rel="stylesheet" href="https://unpkg.com/terminal.css@0.7.2/dist/terminal.min.css" />
     <!-- <xc---link rel="stylesheet" href="https:maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- NAV BAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
             <!-- Brand -->
 
-            <a class="navbar-brand mr-5 ml-3" href="{{url_for('index')}}">Saidino PyDev</a>
+            <a class="navbar-brand mr-5 ml-3" href="#">Saidino PyDev</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,11 +33,11 @@
                     <ul class="navbar-nav">
                         <!-- Home -->
                         <li class="nav-item active mr-3 mt-1 ">
-                            <a class="nav-link" href="{{url_for('index')}}">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#">Home <span class="sr-only">#current</span></a>
                         </li>
                          <!-- Query -->
                          <li class="nav-item active mr-3 mt-1 ">
-                            <a class="nav-link" href='/users_page/'>Query All<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href='/users_page/'>Query All<span class="sr-only">#current</span></a>
                         </li>
                     </ul>
                 </div>
