--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <!-- <link href="/templates/styles/Student-3-128.png" rel="shortcut icon"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, maximum-scale=1.0">
     <title>{%block title %}Saidino Api Page{%endblock%}</title>
-     
+
 
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
             <!-- Brand -->
 
-            <a class="navbar-brand mr-5 ml-3" href="#">Saidino PyDev</a>
+            <a class="navbar-brand mr-5 ml-3" href="#">Saidino PyDev Learn</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
