--- a/templates/base.html
+++ b/templates/base.html
@@ -36,8 +36,12 @@
                         </li>
                          <!-- Query -->
                          <li class="nav-item active mr-3 mt-1 ">
-                            <a class="nav-link" href='/users_page/'>Query All<span class="sr-only">#current</span></a>
+                            <a class="nav-link" href='/users_page/'>Users<span class="sr-only">#current</span></a>
                         </li>
+
+                        <li class="nav-item active mr-3 mt-1 ">
+                           <a class="nav-link" href='/users_page/'>Image APi<span class="sr-only">#current</span></a>
+                       </li>
                     </ul>
                 </div>
                 <!-- Search Bar -->
