criando o view de upload de imag

--- a/app/views/image/templates/upload.html
+++ b/app/views/image/templates/upload.html
@@ -20,7 +20,10 @@
             <input class="form-control-file" type="file" name="inputFile">
         </div>
 
-
+        <div class="form-group">
+            <label for="text">Como queira chamar</label>
+            <input class="form-control" name="filename" id="name" rows="5" placeholder="Add a Description"></textarea>
+        </div>
 
         <!-- Text -->
         <div class="form-group">
