--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                         </li>
 
                         <li class="nav-item active mr-3 mt-1 ">
-                           <a class="nav-link" href='/users_page/'>Image APi<span class="sr-only">#current</span></a>
+                           <a class="nav-link" href='/image_api/'>Image APi<span class="sr-only">#current</span></a>
                        </li>
                     </ul>
                 </div>
