--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,19 @@
                             <a class="nav-link" href='/users_page/'>Users<span class="sr-only">#current</span></a>
                         </li>
 
-                        <li class="nav-item active mr-3 mt-1 ">
-                           <a class="nav-link" href='/image_api/'>Image APi<span class="sr-only">#current</span></a>
-                       </li>
+
+
+                          <li class="drop-down">
+                          <a href="/image_api/">Image Api</a>
+                          <ul>
+                            <li><a href="/image_api/create">Upload</a></li>
+                            <!-- <li><a href="#">List all</a></li>
+                            <li><a href="#">Delete</a></li>
+                            <li><a href="#">Update</a></li>
+                            <li><a href="#">show the code </a></li> -->
+                          </ul>
+                        </li>
+                       
                     </ul>
                 </div>
                 <!-- Search Bar -->
